# agent-engineering-learning

./: .gitignore  00-学习设计文档.md  01-两周学习计划.md  02-下一课学习上下文.md  CHANGELOG.md  README.md  engineering-principles.md  internship-roadmap.md  learning-method.md  pyproject.toml
exercises/: README.md
exercises/2026-07-14-preflight/: mini_agent.py  test_mini_agent.py
exercises/2026-07-21-async/: parallel_queries.py  test_parallel_queries.py
exercises/2026-07-22-tool-batch/: test_tool_batch.py  tool_batch.py
lessons/: 2026-07-14-课前诊断.md  README.md
notes/: 2026-07-14-preflight-answers.md  2026-07-17-data-contracts.md  2026-07-18-async-runtime.md  2026-07-21-async-tools-and-agent-concepts.md  2026-07-22-tool-batch-http.md  README.md
reviews/: README.md
smolagents/: 01-agent-loop.md
sources/: 2026-07-15-agent-framework-status.md  README.md
